--- a/WinCorePatPranali/angular.json
+++ b/WinCorePatPranali/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/main.css"
             ],
             "scripts": []
