--- a/WinCorePatPranali/package.json
+++ b/WinCorePatPranali/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.2",
     "ngx-bootstrap": "^11.0.2",
     "ngx-pagination": "^6.0.3",
+    "ngx-select-dropdown": "^3.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
