--- a/WinCorePatPranali/angular.json
+++ b/WinCorePatPranali/angular.json
@@ -26,7 +26,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              // "node_modules/ngx-select-dropdown/dist/assets/style.css",
+              "node_modules/ngx-toastr/toastr.css",
               "src/main.css"
             ],
             "scripts": []
