--- a/WinCorePatPranali/package.json
+++ b/WinCorePatPranali/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
+    "@angular/animations": "^16.2.12",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
@@ -22,6 +22,7 @@
     "ngx-bootstrap": "^11.0.2",
     "ngx-pagination": "^6.0.3",
     "ngx-select-dropdown": "^3.3.2",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
