--- a/WinCorePatPranali/package.json
+++ b/WinCorePatPranali/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@types/node": "^22.7.5",
     "angular-ng-autocomplete": "^2.0.12",
     "bootstrap": "^5.3.2",
     "ngx-bootstrap": "^11.0.2",
